Update ui of Homepage.jsx file

--- a/Backend/.env
+++ b/Backend/.env
@@ -1,4 +1,3 @@
-FRONTEND_API=https://localhost:5174
+FRONTEND_API=https://climasphere-eight.vercel.app
 MONGODB_URI="mongodb+srv://sheeaditya12_db_user:YmagVbwR3IGbOvMe@cluster0.hitvji5.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0"
 PORT=8000
-https://climasphere-eight.vercel.app
