--- a/Frontend/.env
+++ b/Frontend/.env
@@ -1,2 +1,1 @@
-VITE_BACKEND_URL=https://localhost:8000
-https://climasphere-3980.onrender.com
+VITE_BACKEND_URL=https://climasphere-3980.onrender.com
